[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://vt323_64.tres" type="DynamicFont" id=2]

[node name="Game" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Title" type="RichTextLabel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 347.0
margin_top = 30.0
margin_right = 715.0
margin_bottom = 118.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0, 1, 0.0390625, 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Number Guesser"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Message" type="RichTextLabel" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 167.0
margin_top = 130.0
margin_right = 894.0
margin_bottom = 214.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0, 1, 0.0390625, 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Is 500 your number?"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Greater" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 81.0
margin_top = 294.0
margin_right = 328.0
margin_bottom = 413.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Greater"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Lesser" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 708.0
margin_top = 299.0
margin_right = 955.0
margin_bottom = 418.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Lesser"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Right" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 409.0
margin_top = 443.0
margin_right = 656.0
margin_bottom = 562.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Right"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[connection signal="pressed" from="Greater" to="." method="_on_Greater_pressed"]

[connection signal="pressed" from="Lesser" to="." method="_on_Lesser_pressed"]

[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]


